# forcedimension-core-python3.6

./: .pdm-python  pyproject.toml  setup.py
examples/spring_mass_damper/: spring_mass_damper.py
forcedimension_core/: __init__.py  constants.py  runtime.py  typing.py
forcedimension_core/containers/: __init__.py  numpy.py
forcedimension_core/dhd/: direct.py
forcedimension_core/dhd/expert/: __init__.py  direct.py
forcedimension_core/drd/: adaptors.py  direct.py
