[project]
name = "forcedimension-core-legacy"
version = "1.0.0"
authors = [
    { name="Ember Chow", email="emberchow.business@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.6"
requires = [
  "typing_extensions ^4.1.1",
  "pydantic ^1.9.2",
]

[project.optional-dependencies]
numpy = [
    "numpy>=1.20",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
dependencies = []
license = {text = "LGPL-v3.0"}

[project.urls]
"Homepage" = "https://github.com/EmDash00/forcedimension-python"

